# kruidvat-notification

./: Cargo.toml  Dockerfile  docker-compose.yml  index.js
scripts/: up.sh
src/: main.rs
