[package]
name = "kruidvat-notification"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
color-eyre = "0.6.2"
cron = "0.12.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.12", features = ["gzip"] }
scraper = "0.13.0"
tokio = { version = "1.21.2", features = ["full"] }
